css/global.css
/* ... */
.view-taxonomy-term {
  padding: 21px 14px 14px 18px;
}

.pane-taxonomy-term h2.node-title,
.page-search-node .pane-nodesearch h2.node-title,
.page-search-node .pane-nodesearch .views-field-title {
  font-size: 1.8em;
  line-height: 1.2em;
  margin: 1px 0 0;
  padding: 0;
}

.page-search-node .pane-nodesearch .views-field-title {
  font-weight: bold;
}

.page-search-node .pane-nodesearch .field-type-text-with-summary {
  color: #646464;
  font-size: 1.2em;
  line-height: 1.25em;
}

.page-search-node .pane-nodesearch .views-row {
  margin-bottom: 20px;
  overflow: hidden;
}

.page-search-node .pane-nodesearch .views-field-field-list-image {
  float: left;
  margin: 0 16px 0 0;
}

.pane-taxonomy-term .field-type-text-with-summary,
.page-search-node .pane-nodesearch .views-field-field-ding-body {
  color: #646464;
  font-size: 1.2em;
  line-height: 1.25em;
  margin-top: -2px;
}

.page-search-node .pane-nodesearch p {
  margin: 0;
}

.pane-nodesearch {
  margin-bottom: 20px;
  margin-top: 16px;
}

.page-search-node .pane-nodesearch .views-field-path {
  font-size: 1.2em;
  font-weight: bold;
  letter-spacing: .02em;
  margin-top: 13px;
  text-transform: uppercase;
}

.pane-taxonomy-term .date,
.page-search-node .pane-nodesearch .views-field-changed {
  font-weight: bold;
}

.pane-taxonomy-term .node .field-type-image {
  margin: 0 16px 0 0;
  max-width: inherit;
  width: auto;
}

.pane-taxonomy-term .node .field-type-image img,
.page-search-node .node .field-type-image img {
  height: auto;
  width: 200px;
}

.pane-taxonomy-term .views-row {
  margin-top: 20px;
}

.pane-taxonomy-term .views-row:first-child {
  margin-top: 0;
}

.pane-emusik-playlist {
  background: #fff;
  clear: both;
  padding: 30px 20px 20px 20px;
}

.emusik-playlist-item {
  letter-spacing: .02em;
  text-transform: uppercase;
}

.page-node .pane-emusik-playlist .node {
  background: #f0f0f0;
  padding: 10px 10px 30px 10px;
}

.pane-emusik-playlist .submitted,
.field-type-image .field-label {
  display: none;
}

.page-node .pane-emusik-playlist .node {
  margin-top: 5px;
}

.pane-emusik-playlist .field-type-image {
  width: 180px;
}

.pane-emusik-playlist h2.node-title {
  font-size: 2.3em;
  margin: 0 0 7px 0;
  text-transform: uppercase;
}

.pane-emusik-playlist h2.node-title a {
  color: #000;
}

.pane-emusik-playlist table,
.pane-emusik-playlist thead th,
.pane-emusik-playlist th,
.pane-emusik-playlist tr:hover td,
.pane-emusik-playlist tr.even:hover td.active,
.pane-emusik-playlist tr.odd:hover td.active {
  background: #f0f0f0;
  border: none;
  color: #323230;
}

.pane-emusik-playlist th,
.pane-emusik-playlist td {
  padding: 2px 8px 1px;
}

.pane-emusik-playlist tr:last-child td {
  padding-bottom: 42px;
}

.pane-emusik-playlist .field-type-text-with-summary {
  color: #666;
}

.pane-emusik-playlist thead th,
.pane-emusik-playlist th {
  color: #323230;
  font-weight: bold;
  text-transform: uppercase;
}

.pane-emusik-playlist td {
  font-weight: bold;
}

.pane-emusik-playlist table a,
.mkdru-result-list .external a,
.mkdru-results tr:hover .external a {
  background: url(../images/source-icon.png) no-repeat 0 0;
  display: block;
  float: left;
  height: 16px;
  margin-right: 7px;
  width: 16px;
}

.mkdru-result-list .external {
  width: 120px;
}

.mkdru-result-list .external a {
  direction: ltr;
  text-indent: -9000px;
}

.pane-emusik-playlist table a.dk,
.mkdru-result-list .external a.dk,
.mkdru-result-list .external a.dk:hover,
.mkdru-results lt-list .external a.bibzoom,
.mkdru-result-list .external a.bibzoom:hover,
.mkdru-results tr:hover .external a.bibzoom {
  background-position: 0 -16px;
}

.pane-emusik-playlist table a.wimp,
.mkdru-result-list .external a.wimp,
.mkdru-result-list .external a.wimp:hover,
.mkdru-results tr:hover .external a.wimp {
  background-position: 0 -32px;
}

.pane-emusik-playlist table a.fm,
.mkdru-result-list .external a.fm,
.mkdru-result-list .external a.fm:hover,
.mkdru-results tr:hover .external a.fm {
  background-position: 0 -48px;
}

.pane-emusik-playlist table a.spotify,
.mkdru-result-list .external a.spotify,
.mkdru-result-list .external a.spotify:hover,
.mkdru-results tr:hover .external a.spotify {
  background-position: 0 -64px;
}

.pane-emusik-playlist table a.youtube,
.mkdru-result-list .external a.youtube,
.mkdru-result-list .external a.youtube:hover,
.mkdru-results tr:hover .external a.youtube {
  background-position: 0 -80px;
}

.node-social-icons {
  position: absolute;
  right: 0;
  top: 0;
}

.pane-node-field-ding-material-type,
.pane-node-field-ding-article-type,
.pane-node-field-ding-supplier,
.pane-node-field-artist-ablum-track,
.pane-node-field-category,
.pane-node-ding-content-tags,
.pane-node-field-playlist-material-type,
.pane-node-field-playlist-article-type,
.pane-node-field-playlist-supplier,
.pane-node-field-playlist-artist-ablum-track,
.pane-node-field-playlist-category,
.pane-node-field-pl-artist-album-track,
.pane-node-field-playlist-tags {
  color: #3f966b;
  font-weight: bold;
  letter-spacing: .05em;
  margin-right: 5px;
  text-transform: uppercase;
  margin-top: 10px;
}

.pane-node-field-artist-ablum-track,
.pane-node-field-category,
.pane-node-ding-content-tags {
  margin-bottom: 20px;
}

.node-type-ding-event .pane-node-ding-content-tags {
  margin: 0;
  position: absolute;
  top: 10px;
  width: 100%;
}

.page-node.node-type-ding-news .node-ding-news.node {
  margin: 0;
}

.pane-node-field-ding-material-type a,
.pane-node-field-ding-article-type a,
.pane-node-field-ding-supplier a,
.pane-node-field-artist-ablum-track a,
.pane-node-field-category a,
.pane-node-ding-content-tags a,
.pane-node-field-playlist-material-type a,
.pane-node-field-playlist-article-type a,
.pane-node-field-playlist-supplier a,
.pane-node-field-playlist-artist-ablum-track a,
.pane-node-field-playlist-category a,
.pane-node-field-pl-artist-album-track a,
.pane-node-field-playlist-tags a {
  font-weight: bold;
}
/* ... */

